# market_place_sprint

./: .env.template  .test.env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
app/: config.py  database.py  main.py
app/brocker/: __init__.py  consumer.py  producer.py
app/dto/: orders.py  products.py  shops.py  users.py
app/migrations/: env.py
app/migrations/versions/: 0aa5de7f16b6_type_of_shops.py  19dfbe9f6e54_migration_3.py  1c6dd080e6f0_type_of_shops.py  6e9e1c6ca6fb_.py  9be28b9816e0_type_of_prise_product.py  9cdd057b2e9e_delete_product_grade.py  b4258cac3cb6_init.py  c701633cd5c5_migration_2.py  d783b3ef7e0f_delete_product_grade.py  f91092c51a71_type_of_shops.py
app/models/: __init__.py  address.py  cards.py  categories.py  grade.py  order_status.py  orders.py  photos.py  product.py  reviews.py  shops.py  tags.py  users.py
app/routers/: orders.py  products.py  shops.py  users.py
app/services/: orders.py  products.py  shops.py  users.py
tests/: conftest.py
tests/test_crud/: test_products.py  test_shops.py  test_users.py
