[tool.poetry]
name = "market-place-sprint"
version = "0.1.0"
description = ""
authors = ["igorynos <igorynos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
unicorn = "^2.0.1.post1"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
pika = "^1.3.2"
pytest = "^8.3.2"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
